--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,4 +1,9 @@
-FROM node:latest
+FROM alpine
+
+RUN apk update && \
+    apk upgrade && \
+    apk add npm \
+    && rm -rf /var/cache/apk/*
 
 COPY . /src
 
