--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 services:
-  test:
-    build: ./test
-    depends_on:
-      - app
+  app:
+    build: './app'
+    ports:
+      - "3000:3000"
     networks:
       - net
 networks:
